<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">App Update</string>
    <string name="app_icon">app icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="preference_file_key">alarm_pref</string>
    <!--    <string name="app_id_admob" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->
    //test id
    <string name="public_ip_address">Ip Address</string>
    <string name="your_ip_na">N/A</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="your_ip"><xliff:g example="192.168.0.1" id="ip">%s</xliff:g></string>
    <string name="na">N/A</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="privacu_link">https://unseenmessage.blogspot.com/2023/09/app-updater-privacy-policy.html</string>
    <string name="lets_update_mobile_software">Lets Update Mobile Software</string>
    <string name="start">START</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="change_language">Change Language</string>
    <string name="continue_language">Continue</string>
    <string name="software_update">Software Update</string>
    <string name="accept">ACCEPT</string>
    <string name="welcome_to">Welcome to</string>
    <string name="software_update_amp_apps_update"><![CDATA[SOFTWARE UPDATE & Apps Update]]></string>
    <string name="policy_text">By tapping the ‘Accept’ button, you confirm that you agree with our Privacy Policy.</string>
    <string name="scanning">Scanning...</string>
    <string name="total_update_found">Total Update Found</string>
    <string name="checking_updates">Checking Updates:</string>
    <string name="app_version">App Version</string>
    <string name="last_update">Last Update</string>
    <string name="view_on_play_store">View on Play Store</string>
    <string name="app_usage_fragment_today">Today</string>
    <string name="app_usage_fragment_yesterday">Yesterday</string>
    <string name="app_usage_fragment_this_week">Week</string>
    <string name="app_usage_fragment_this_month">Monthly</string>
    <string name="app_usage">App Usage</string>
    <string name="system_update">System Update</string>
    <string name="android_version">Android Version</string>
    <string name="app_details">App Details</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="uninstalled_apps">Uninstall Apps</string>
    <string name="device_info">Device Info</string>
    <string name="restore_apps">Restore Apps</string>
    <string name="sensor">All Sensors</string>
    <string name="update_available">Available Update</string>
    <string name="connection_wifi">Connections Details</string>
    <string name="update_your_device_software">Update Your Device Software</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="uninstalle">Uninstall</string>
    <string name="registration_agreement">By continuing, you agree to our
        \n<a href="terms://">Privacy Policy</a> and <a href="privacy://">Terms of Services</a> \n <a href="terms://">Cancel or Restore</a>
</string>

    <string name="by_continuing_by_term_and_policy">By continuing, you agree to \n<a href="https://unseenmessage.blogspot.com/2023/12/term-and-conditions.html">Terms of Service.</a> and <a href="https://mobiledatatransferapp.blogspot.com/2023/12/privacy-policy.html">Privacy Policy</a></string>
    <string name="trail_premium">3 days free trail after payment will be charged from Google Play account. Subscription automatically renews unless it id cancelled at least 24 hours before the end of current period. Your account will be charged for renewal within 24 hours proir to end of the current period. You can manage and cancel your subscription at any time from the Google Play store</string>

    <string name="launch">Launch</string>
    <string name="subscribe">Subscribe</string>
    <string name="start_free_trail">Start Free Trail</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="enjoy_all_features_without_ads">Effortable Price</string>
    <string name="enjoy_all_unlimited_data">Unlock Pro features</string>
    <string name="pro_experiance">Papuler</string>
    <string name="tite_pro">PREMIUM <font fgcolor="#2FC75C">ACCESS</font></string>
    <string name="lifeTime">One time Pay</string>
    <string name="scan_apps">Scan Apps</string>
    <string name="uninstall_apps">Uninstall Apps</string>
    <string name="system_apps">System Apps</string>
    <string name="battery_info">Battery Info</string>
    <string name="get_daily_apps_updates">Get Daily Apps Updates</string>
    <string name="please_allow_the_app">Please allow the app to Get Daily Apps Updates, so the app functions work properly.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="please_enable_battery_optimizations_switch">Please enable battery optimizations switch</string>
    <string name="how_do_you_rate_our_app">How do you rate our app?</string>
    <string name="submit">Submit</string>
    <string name="device_name">Device Name:</string>
    <string name="loading_apps">Loading Apps</string>
    <string name="level">Level</string>
    <string name="status">Status</string>
    <string name="power_source">Power Source</string>
    <string name="health">Health</string>
    <string name="battery_type">Battery Type</string>
    <string name="voltage">Voltage</string>
    <string name="temperature">Temperature</string>
    <string name="overall_status">Overall Status</string>
    <string name="yes">Yes</string>
    <string name="restore">Restore</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="share_app">Share App</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_app">More Apps (AD)</string>


    <string-array name="size_array">
        <item>512 x 512</item>
        <item>76 x 76</item>
    </string-array>

    <string-array name="format_array">
        <item>png</item>
        <item>jpeg</item>
    </string-array>

    <string-array name="model_array">
        <item>icbinp-afterburn</item>
        <!-- Add other model names if needed -->
    </string-array>


</resources>